@@ -1,6 +1,8 @@
 edk2 (0~20161202.7bbe0b3e-2) UNRELEASED; urgency=medium
 
   * debian/rules: Replace hardcoded "AARCH64" strings with $(EDK2_HOST_ARCH).
+  * debian/rules: AAVMF image generation doesn't require the edksetup
+    environment, so move that code outside of it.
 
  -- dann frazier <dannf@debian.org>  Thu, 06 Apr 2017 16:37:45 -0600
 
